--- a/docs/services/general-info/env-var-deltas/4.0.0-5.0.0-added.md
+++ b/docs/services/general-info/env-var-deltas/4.0.0-5.0.0-added.md
@@ -219,7 +219,7 @@
 |                                               | `OCIS_EVENTS_AUTH_PASSWORD;USERLOG_EVENTS_AUTH_PASSWORD`                                                                                                                                           | The password to authenticate with the events broker. The events broker is the ocis service which receives and delivers events between the services.                                                                                                                                                                                                                                                                                                                         |                                       |
 |                                               | `OCIS_SERVICE_ACCOUNT_ID;USERLOG_SERVICE_ACCOUNT_ID`                                                                                                                                               | The ID of the service account the service should use. See the 'auth-service' service description for more details.                                                                                                                                                                                                                                                                                                                                                          |                                       |
 |                                               | `OCIS_SERVICE_ACCOUNT_SECRET;USERLOG_SERVICE_ACCOUNT_SECRET`                                                                                                                                       | The service account secret.                                                                                                                                                                                                                                                                                                                                                                                                                                                 |                                       |
-| services/web/pkg/config/options.go            | `WEB_OPTION_LOGIN_URL`Specifies the target URL to the login page. This is helpful when an external IdP is used. This option is disabled by default. Example URL like: https://www.myidp.com/login. |                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |                                       |
+| services/web/pkg/config/options.go            | `WEB_OPTION_LOGIN_URL`                                                                                                                                                                             | Specifies the target URL to the login page. This is helpful when an external IdP is used. This option is disabled by default. Example URL like: https://www.myidp.com/login. |                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |                                       |
 |                                               | `WEB_OPTION_DISABLED_EXTENSIONS`                                                                                                                                                                   | A list to disable specific Web extensions identified by their ID. The ID can e.g. be taken from the 'index.ts' file of the web extension. Example: 'com.github.owncloud.web.files.search,com.github.owncloud.web.files.print'. See the Environment Variable Types description for more details.                                                                                                                                                                             |                                       |
 |                                               | `WEB_OPTION_USER_LIST_REQUIRES_FILTER`                                                                                                                                                             | Defines whether one or more filters must be set in order to list users in the Web admin settings. Set this option to 'true' if running in an environment with a lot of users and listing all users could slow down performance. Defaults to 'false'.                                                                                                                                                                                                                        | false                                 |
 |                                               | `WEB_OPTION_EMBED_ENABLED`                                                                                                                                                                         | Defines whether Web should be running in 'embed' mode. Setting this to 'true' will enable a stripped down version of Web with reduced functionality used to integrate Web into other applications like via iFrame. Setting it to 'false' or not setting it (default) will run Web as usual with all functionality enabled. See the text description for more details.                                                                                                       |                                       |
